@@ -1,5 +1,6 @@
 package predefiendmethods;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collector;
 import java.util.stream.Collectors;
@@ -8,7 +9,7 @@ import java.util.stream.Stream;
 public class OddEven {
 public static void main(String[] args) {
 	 
-	List<Integer> list = List.of(10,11,20,89,77,23,22);
+	List<Integer> list = Arrays.asList(10,11,20,89,77,23,22);
 	
 	 list.stream().filter(p->p%2==0 && p>10).collect(Collectors.toList()).forEach(System.out::println);
 	 
